[package]
name = "rust-modplayer"
version = "0.1.0"
authors = ["Martin Löffler <git@fatalerrorcoded.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample = "0.10.0"
byteorder = "1.3.2"
cpal = "0.11.0"
arr_macro = "0.1.3"
atty = "0.2.14"
